added somemore details

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
         <title>resume</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <h2>Hello World</h2>
-        <h3>Hello World</h3>
-        <h4>Hello World</h4>
-        <h5>Hello World</h5>
-        <h6>Hello World</h6>
-        <p>This is a paragraph</p>
+       <h1> Kamisetty SriLakshmi</h1>
+       <div.class="personal-info">
+            <p>Adress:CheruvukattaBazar,Piduguralla,AndhraPradesh</p>
+            <p>Phone:7981241755</p>
+            <p>Email:kamisettysrilakshmi3@gmail.com</p>
+            <p>LinkedIn:Kamisetty Sri Lakshmi</p>
+            <p>GitHub:SriLakshmi-3</p>
+            
+       </div>
+       <div.class="education-section">
+            <h2>EDUCATION</h2>
+            <h4>B.Tech COMPUTER SCIENCE AND ENGINEERING</h4>
+            <p>KL UNIVERSITY</p>
+            <p>Address:Guntur,Vaddeswaram,AndhraPradesh</p>
+            <p>CGPA:9.64</p>
+            <p>Year:3</p>
+       </div.class>
+
     </body>
 </html>
